# Lurker

./: .gitignore  CMakeLists.txt  CMakePresets.json  LurkerNew.cpp  LurkerNew.h  README.md
Credentials/: CMakelists.txt  credentials.cpp
Credentials/Logger/: CMakeLists.txt  Logger.cpp  Logger.h
Credentials/Postgre/: CMakeLists.txt  Postgre.cpp  Postgre.h
Credentials/Postrgre/: CMakeLists.txt  Postgre.cpp  Postgre.h
Credentials/cURLing/: CMakeLists.txt  cURLing.cpp  cURLing.h
Games/: CMakeLists.txt
Games/InitAllGames/: CMakeLists.txt  InitAllGames.cpp
Games/UpdateGameInfo/: CMakeLists.txt  UpdateGameInfo.cpp  func.cpp  func.h
Reccomendations/: CMakeLists.txt
